<resources>
    <string name="app_name">Spiro</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">Use Period</string>

    <string name="attribute_display_usePeriodUuid">Use Period ID</string>
    <string name="attribute_description_usePeriodUuid">Unique identifier for Use Period</string>
    <string name="attribute_display_patientUuid">Patient ID</string>
    <string name="attribute_description_patientUuid">Unique identifier for Patient</string>
    <string name="attribute_display_patientName">Patient Name</string>
    <string name="attribute_description_patientName">Name of Patient</string>
    <string name="attribute_display_androidDeviceUuid">Android Device ID</string>
    <string name="attribute_description_androidDeviceUuid">Unique identifier for Android Device</string>
    <string name="attribute_display_usePeriodStart">Use Period Start</string>
    <string name="attribute_description_usePeriodStart">Start date and time of Use Period</string>
    <string name="attribute_display_usePeriodEnd">Use Period End</string>
    <string name="attribute_description_usePeriodEnd">End date and time of Use Period</string>
    <string name="attribute_display_applicationMode">Application Mode</string>
    <string name="attribute_description_applicationMode">Mode of the Application: can be passive or active</string>
    <string-array name="attribute_applicationMode_titles">
        <item>Passive</item>
        <item>Active</item>
    </string-array>
    <string-array name="attribute_applicationMode_values">
        <item>APP_MODE_PASSIVE</item>
        <item>APP_MODE_ACTIVE</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
