<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="usePeriodUuid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/attribute_description_usePeriodUuid"
        android:title="@string/attribute_display_usePeriodUuid" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="patientUuid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/attribute_description_patientUuid"
        android:title="@string/attribute_display_patientUuid" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="patientName"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/attribute_description_patientName"
        android:title="@string/attribute_display_patientName" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="androidDeviceUuid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/attribute_description_androidDeviceUuid"
        android:title="@string/attribute_display_androidDeviceUuid" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="usePeriodStart"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/attribute_description_usePeriodStart"
        android:title="@string/attribute_display_usePeriodStart" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="usePeriodEnd"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/attribute_description_usePeriodEnd"
        android:title="@string/attribute_display_usePeriodEnd" />
    <ListPreference
        android:defaultValue="APP_MODE_PASSIVE"
        android:entries="@array/attribute_applicationMode_titles"
        android:entryValues="@array/attribute_applicationMode_values"
        android:key="applicationMode"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/attribute_description_applicationMode"
        android:title="@string/attribute_display_applicationMode" />

</PreferenceScreen>
